...
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/allProfilesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Profiles"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/allUsersList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/admin_all_users_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        app:layout_constraintBottom_toTopOf="@+id/allUsersList"
        app:layout_constraintEnd_toStartOf="@+id/allProfilesText"
        app:layout_constraintHorizontal_bias="0.216"
...
