<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.BrowseEventsActivity">

    <!-- Title of Browse Events -->
    <TextView
        android:id="@+id/browse_events_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Browse Events"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"/>

    <!-- Events ListView -->
    <ListView
        android:id="@+id/eventsListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/browse_events_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Back Button -->
    <Button
        android:id="@+id/browseEventsBackBtn"
        android:layout_width="96dp"
        android:layout_height="39dp"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="@+id/browse_events_title"
        app:layout_constraintEnd_toStartOf="@+id/browse_events_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
