<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/eventNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Event Name"/>

    <EditText
        android:id="@+id/eventLocationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Location"/>

    <EditText
        android:id="@+id/eventDetailsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="Event Details" />

    <EditText
        android:id="@+id/eventDateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Event Date (dd-MM-yyyy)"/>

    <EditText
        android:id="@+id/waitlistLimitEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Waitlist Limit (Optional)"/>

    <Switch
        android:id="@+id/geolocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enable: Geo Location" />
    <Button
        android:id="@+id/selectPosterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Poster" />

    <ImageView
        android:id="@+id/eventPosterImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/poster_placeholder" />


    <Button
        android:id="@+id/createEventButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Event"/>

    <Button
        android:id="@+id/backButtonFromCreateEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back" />
</LinearLayout>
