...
        android:id="@+id/button_create_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:text="New Event" />

    <Button
        android:id="@+id/sendNotificationToAllEntrantsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send To All" />
...
